--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#04342E",
-        "titleBar.activeBackground": "#064941",
-        "titleBar.activeForeground": "#ECFEFB"
+        "activityBar.background": "#073523",
+        "titleBar.activeBackground": "#094A31",
+        "titleBar.activeForeground": "#F1FDF9"
     }
 }
